--- a/Oval/Oval.csproj
+++ b/Oval/Oval.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Requirement.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ReadMe.md" />
     <None Include="Oval.pfx" />
     <None Include="project.json" />
   </ItemGroup>
